--- a/ios/Podfile
+++ b/ios/Podfile
@@ -114,6 +114,9 @@ post_install do |installer|
       if target.name == 'react-native-video'
           config.build_settings['SWIFT_VERSION'] = '5.0'
       end
+      if target.name == 'react-native-vision-camera'
+          config.build_settings['SWIFT_VERSION'] = '5.2'
+      end
     end
   end
   # Ensure deployment_target is set correctly for all projects
