--- a/ios/Podfile
+++ b/ios/Podfile
@@ -114,8 +114,8 @@ post_install do |installer|
       if target.name == 'react-native-video'
           config.build_settings['SWIFT_VERSION'] = '5.0'
       end
-      if target.name == 'react-native-vision-camera'
-          config.build_settings['SWIFT_VERSION'] = '5.2'
+      if target.name == 'VisionCamera'
+          config.build_settings['SWIFT_VERSION'] = '5.0'
       end
     end
   end
