--- a/capabilities-setup-config.json
+++ b/capabilities-setup-config.json
@@ -15,7 +15,8 @@
         "android": {
             "gradle": {
                 "classpaths": [
-                    "com.google.firebase:firebase-crashlytics-gradle:2.2.0"
+                    "com.google.firebase:firebase-crashlytics-gradle:3.0.2",
+                    "com.google.gms:google-services:4.4.1"
                 ],
                 "plugins": [
                     "com.google.firebase.crashlytics"
