--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,6 @@ android.suppressUnsupportedCompileSdk=33
 newArchEnabled=false
 hermesEnabled=true
 mendixnative.cookieEncryption=false
+
+# Enable edge-to-edge display (React Native 0.81+)
+edgeToEdgeEnabled=true
