--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -27,3 +27,6 @@ newArchEnabled=false
 hermesEnabled=true
 mendixnative.cookieEncryption=false
 VisionCamera_enableCodeScanner=true
+
+# Enable edge-to-edge display (React Native 0.81+)
+edgeToEdgeEnabled=true
