--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-native": "0.77.3",
     "react-native-blob-util": "0.21.2",
     "react-native-device-info": "14.0.4",
-    "react-native-edge-to-edge": "^1.7.0",
+    "react-native-edge-to-edge": "1.7.0",
     "react-native-gesture-handler": "2.23.1",
     "react-native-image-picker": "7.2.3",
     "react-native-localize": "3.2.1",
