--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -28,5 +28,5 @@ hermesEnabled=true
 mendixnative.cookieEncryption=false
 VisionCamera_enableCodeScanner=true
 
-# Enable edge-to-edge display (React Native 0.81+)
+# Enable edge-to-edge display
 edgeToEdgeEnabled=true
