--- a/ios/Podfile
+++ b/ios/Podfile
@@ -9,8 +9,8 @@ def node_require(script)
     )", __dir__]).strip
 end
 
-# Explicitly disable new architecture until all dependencies are updated
-ENV['RCT_NEW_ARCH_ENABLED'] = '0'
+# Explicitly enable new architecture
+ENV['RCT_NEW_ARCH_ENABLED'] = '1'
 
 # Use it to require both react-native's and this package's scripts:
 node_require('react-native/scripts/react_native_pods.rb')
@@ -47,6 +47,8 @@ def common_pods
 
   use_react_native!(
     :path => config[:reactNativePath],
+    :hermes_enabled => true,
+    :fabric_enabled => true,
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
@@ -64,6 +66,7 @@ def common_pods
 
   # Required MendixNative dependency
   pod 'SSZipArchive'
+  pod 'RNCAsyncStorage', :path=> "../node_modules/@react-native-async-storage/async-storage", :modular_headers => true
 
   # REQUIRED PODS END
 end
@@ -91,24 +94,8 @@ post_install do |installer|
     # :ccache_enabled => true
   )
 
-
-  installer.pods_project.build_configurations.each do |config|
-    config.build_settings['ENABLE_BITCODE'] = 'NO'
-    config.build_settings['OTHER_LDFLAGS'] ||= ['$(inherited)']
-    if config.name == "Debug"
-      config.build_settings['DEAD_CODE_STRIPPING'] = 'YES'
-    end
-  end
-
   installer.pods_project.targets.each do |target|
     target.build_configurations.each do |config|
-      if target.name == "React"
-        if config.name == "ReleaseDevApp"
-          config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)']
-          config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] << "DEBUG=1"
-        end
-      end
-      config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)', '_LIBCPP_ENABLE_CXX17_REMOVED_UNARY_BINARY_FUNCTION']
       # Specify 'Swift Version: 5.0' for resolving archieve errors.
       if target.name == 'react-native-video'
           config.build_settings['SWIFT_VERSION'] = '5.0'
@@ -117,16 +104,5 @@ post_install do |installer|
           config.build_settings['SWIFT_VERSION'] = '5.2'
       end
     end
-  end
-  # Ensure deployment_target is set correctly for all projects
-  installer.generated_projects.each do |project|
-      project.targets.each do |target|
-          target.build_configurations.each do |config|
-              config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = deployment_target
-          end
-      end
-      project.build_configurations.each do |bc|
-          bc.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = deployment_target
-      end
   end
 end
