feat: Android build

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,5 @@ android/\.settings/org\.eclipse\.buildship\.core\.prefs
 android/mendixnative-release/\.project
 
 android/mendixnative-release/\.settings/org\.eclipse\.buildship\.core\.prefs
+
+android/**/.cxx/
