--- a/android/build.gradle
+++ b/android/build.gradle
@@ -40,8 +40,11 @@ buildscript {
 project.ext {
     set('react-native', [
             versions: [
-                // Override Firebase BOM version to avoid updating to RNFirebase 20.2.0+,
+                // Override Firebase BOM version to avoid updating to react-native-firebase 20.2.0+,
                 // which adds many new node_modules increasing the size significantly.
+                // Affected dependencies include the entire react-native-firebase suite e.g.:
+                // @react-native-firebase/app, @react-native-firebase/analytics, @react-native-firebase/crashlytics, @react-native-firebase/messaging
+                // NOTE: If updating to react-native-firebase 20.2.0+ is done, this override should be removed.
                     firebase: [
                             bom: "33.1.1"
                     ],
