add duplicate check for libjsi.so

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -105,6 +105,7 @@ android {
     packagingOptions {
         pickFirst "**/libc++_shared.so"
         pickFirst "**/libcrypto.so"
+        pickFirst "**/libjsi.so"
     }
 }
 
