add libreactnative.so to prevent duplicate

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -106,6 +106,7 @@ android {
         pickFirst "**/libc++_shared.so"
         pickFirst "**/libcrypto.so"
         pickFirst "**/libjsi.so"
+        pickFirst "**/libreactnative.so"
     }
 }
 
