[OFF-804] update op sqlite (#1101)
* Update op-sqlite to 15.0.7

* use mendix/native 10.3.1 temporarily to test

* fix wrong syntax on op-sqlite patch and update mendix/native

* add duplicate check for libjsi.so

* add libreactnative.so to prevent duplicate

* use published version of @mendix/native

* remove resolved file and add npm registry

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -105,6 +105,8 @@ android {
     packagingOptions {
         pickFirst "**/libc++_shared.so"
         pickFirst "**/libcrypto.so"
+        pickFirst "**/libjsi.so"
+        pickFirst "**/libreactnative.so"
     }
 }
 
