--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "postinstall": "node patches/apply-patches.js && jetify",
-    "configure": "native-mobile-toolkit configure --config-path='./config.json' --verbose"
+    "configure": "native-mobile-toolkit configure --config-path='./config.json' --verbose",
+    "disable-edge-to-edge": "bash scripts/disable-edge-to-edge.sh"
   },
   "dependencies": {
     "@d11/react-native-fast-image": "8.11.1",
