--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,6 +26,7 @@ android.suppressUnsupportedCompileSdk=33
 newArchEnabled=false
 hermesEnabled=true
 mendixnative.cookieEncryption=false
+VisionCamera_enableCodeScanner=true
 
 # Enable edge-to-edge display
 edgeToEdgeEnabled=true
