--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@d11/react-native-fast-image": "8.11.1",
     "@gorhom/bottom-sheet": "5.1.1",
-    "@mendix/native": "github:mendix/mendix-native.git#moo/MOO-1870-react-19-upgrade",
+    "mendix-native": "github:mendix/mendix-native.git#moo/MOO-1870-react-19-upgrade",
     "@op-engineering/op-sqlite": "15.0.7",
     "@react-native-async-storage/async-storage": "2.0.0",
     "@react-native-camera-roll/camera-roll": "7.4.0",
