add info-dev.plist for dev target

--- a/ios/nativeTemplate/Info-dev.plist
+++ b/ios/nativeTemplate/Info-dev.plist
@@ -36,7 +36,7 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<false/>
 		<key>NSAllowsLocalNetworking</key>
-		<false/>
+		<true/>
 	</dict>
 	<key>NSBluetoothAlwaysUsageDescription</key>
 	<string>This app may need access to your Bluetooth connection</string>
