chore: migrate to swift 5

--- a/.github/workflows/ios-build-custom-dev-app.yml
+++ b/.github/workflows/ios-build-custom-dev-app.yml
@@ -38,8 +38,12 @@ jobs:
           path: ios/Pods
           key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
 
+      - name: bundle install
+        run: bundle install
+        working-directory: ./ios
+
       - name: pod install
-        run: pod install
+        run: bundle exec pod install
         working-directory: ./ios
 
       - name: appcenter prebuilt script test
