--- a/ios/Dev/Config/config.release.xcconfig
+++ b/ios/Dev/Config/config.release.xcconfig
@@ -1,2 +1,3 @@
+#include "Pods/Target Support Files/Pods-dev/Pods-dev.release.xcconfig"
 #include "Pods/Target Support Files/Pods-dev/Pods-dev.releasedevapp.xcconfig"
 #include "config.xcconfig"
