--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^5.1.1",
-    "@mendix/native": "9.2.1",
-    "@notifee/react-native": "9.1.8",
+    "@mendix/native": "9.2.0",
     "@op-engineering/op-sqlite": "9.2.7",
     "@react-native-async-storage/async-storage": "2.0.0",
     "@react-native-camera-roll/camera-roll": "7.4.0",
@@ -17,6 +16,7 @@
     "@react-native-community/cli-platform-android": "16.0.2",
     "@react-native-community/cli-platform-ios": "16.0.2",
     "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/push-notification-ios": "1.10.1",
     "@react-native-masked-view/masked-view": "0.3.1",
     "@react-native-picker/picker": "2.11.0",
     "@react-navigation/native": "7.0.14",
@@ -31,6 +31,7 @@
     "react-native-localize": "3.2.1",
     "react-native-pager-view": "6.4.1",
     "react-native-permissions": "4.1.5",
+    "react-native-push-notification": "8.1.1",
     "react-native-reanimated": "3.16.1",
     "react-native-safe-area-context": "5.2.0",
     "react-native-schedule-exact-alarm-permission": "^0.1.3",
