during building apk for personal finance, it throws error if test folder is empty.

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -29,3 +29,4 @@ VisionCamera_enableCodeScanner=true
 
 # Enable edge-to-edge display
 edgeToEdgeEnabled=true
+android.testInstrumentationRunnerArguments.notAnnotation=androidx.test.filters.FlakyTest
