--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,7 +12,7 @@ buildscript {
         androidXCore = "1.6.0"
         androidXBrowser = "1.3.0"
 
-        ndkVersion = "26.1.10909125"
+        ndkVersion = "27.3.13750724"
     }
     repositories {
         google()
@@ -86,6 +86,31 @@ allprojects {
         maven { url "https://packages.rnd.mendix.com/jcenter" }
         maven {
             url "$rootDir/../node_modules/@notifee/react-native/android/libs"
+        }
+
+        // Build all modules with Android 16KB pages enabled
+        plugins.withId('com.android.application') {
+            android {
+                defaultConfig {
+                    externalNativeBuild {
+                        cmake {
+                            arguments "-DANDROID_SUPPORT_FLEXIBLE_PAGE_SIZES=ON"
+                        }
+                    }
+                }
+            }
+        }
+
+        plugins.withId('com.android.library') {
+            android {
+                defaultConfig {
+                    externalNativeBuild {
+                        cmake {
+                            arguments "-DANDROID_SUPPORT_FLEXIBLE_PAGE_SIZES=ON"
+                        }
+                    }
+                }
+            }
         }
     }
 }
